fix: wrong name in cue file for control plane

--- a/src/main/k8s/BUILD.bazel
+++ b/src/main/k8s/BUILD.bazel
@@ -124,7 +124,7 @@ cue_library(
 
 cue_library(
     name = "control_plane",
-    srcs = ["control_plane_v2.cue"],
+    srcs = ["control_plane.cue"],
     deps = [
         ":base",
         ":config",
