fix: inlcude update_control_plane as dependencies for running tests in git workflow

--- a/.github/workflows/update-cmms.yml
+++ b/.github/workflows/update-cmms.yml
@@ -151,6 +151,7 @@ jobs:
       update-worker2-duchy,
       update-simulators,
       update-reporting-v2,
+      update-control_plane,
     ]
     uses: ./.github/workflows/run-k8s-tests.yml
     secrets: inherit
