--- a/src/test/kotlin/org/wfanet/measurement/integration/deploy/gcloud/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/integration/deploy/gcloud/BUILD.bazel
@@ -143,3 +143,25 @@ java_test(
     test_class = "org.wfanet.measurement.integration.deploy.gcloud.GCloudSpannerInProcessMeasurementSystemProberIntegrationTest",
     runtime_deps = [":gcloud_spanner_in_process_measurement_system_prober_integration_test"],
 )
+
+kt_jvm_library(
+    name = "gcloud_in_process_access_cli_integration_test",
+    srcs = ["GCloudInProcessAccessCliIntegrationTest.kt"],
+    data = ["@cloud_spanner_emulator//:emulator"],
+    runtime_deps = [
+        "@wfa_common_jvm//imports/java/org/yaml:snakeyaml",
+    ],
+    deps = [
+        "//src/main/kotlin/org/wfanet/measurement/integration/common:in_process_access_cli_integration_test",
+        "//src/main/kotlin/org/wfanet/measurement/integration/deploy/gcloud:spanner_access_services_factory",
+    ],
+)
+
+# TODO(bazelbuild/rules_kotlin#1088): Use kt_jvm_test when fixed.
+java_test(
+    name = "GCloudInProcessAccessCliIntegrationTest",
+    size = "large",
+    # TODO(world-federation-of-advertisers/cross-media-measurement#827): Remove when flakiness is resolved.
+    test_class = "org.wfanet.measurement.integration.deploy.gcloud.GCloudInProcessAccessCliIntegrationTest",
+    runtime_deps = [":gcloud_in_process_access_cli_integration_test"],
+)
