--- a/src/main/k8s/local/BUILD.bazel
+++ b/src/main/k8s/local/BUILD.bazel
@@ -22,6 +22,8 @@ DB_SECRET_NAME = "db-creds"
 
 MC_CONFIG_SECRET_NAME = "mc-config"
 
+exports_files(["open_id_providers_config.json"])
+
 cue_library(
     name = "config_cue",
     srcs = ["config.cue"],
@@ -331,6 +333,7 @@ kustomization_dir(
         "config_files_kustomization.yaml",
         "empty_akid_mapping_config.textproto",
         "empty_encryption_key_pair_config.textproto",
+        "open_id_providers_config.json",
         "//src/main/k8s/testing/data:synthetic_generation_specs_small",
         "//src/main/k8s/testing/secretfiles:known_event_group_metadata_type_set",
         "//src/main/k8s/testing/secretfiles:metric_spec_config.textproto",
@@ -346,6 +349,7 @@ kustomization_dir(
     name = "config_files",
     srcs = [
         "config_files_kustomization.yaml",
+        "open_id_providers_config.json",
         ":encryption_key_pair_config.textproto",
         "//src/main/k8s/testing/data:synthetic_generation_specs_small",
         "//src/main/k8s/testing/secretfiles:known_event_group_metadata_type_set",
