--- a/src/main/k8s/local/testing/BUILD.bazel
+++ b/src/main/k8s/local/testing/BUILD.bazel
@@ -61,6 +61,7 @@ kustomization_dir(
     name = "config_files",
     srcs = [
         "config_files_kustomization.yaml",
+        "//src/main/k8s/local:open_id_providers_config.json",
         "//src/main/k8s/testing/data:synthetic_generation_specs_small",
         "//src/main/k8s/testing/secretfiles:known_event_group_metadata_type_set",
         "//src/main/k8s/testing/secretfiles:metric_spec_config.textproto",
@@ -74,6 +75,7 @@ kustomization_dir(
     srcs = [
         "config_files_kustomization.yaml",
         "empty_encryption_key_pair_config.textproto",
+        "//src/main/k8s/local:open_id_providers_config.json",
         "//src/main/k8s/testing/data:synthetic_generation_specs_small",
         "//src/main/k8s/testing/secretfiles:known_event_group_metadata_type_set",
         "//src/main/k8s/testing/secretfiles:metric_spec_config.textproto",
