--- a/src/main/k8s/local/testing/config_files_kustomization.yaml
+++ b/src/main/k8s/local/testing/config_files_kustomization.yaml
@@ -16,6 +16,7 @@ configMapGenerator:
 - name: config-files
   files:
   - authority_key_identifier_to_principal_map.textproto
+  - open_id_providers_config.json
   - encryption_key_pair_config.textproto
   - metric_spec_config.textproto
   - synthetic_population_spec_small.textproto
