--- a/src/main/kotlin/org/wfanet/measurement/reporting/deploy/v2/postgres/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/reporting/deploy/v2/postgres/BUILD.bazel
@@ -5,6 +5,7 @@ kt_jvm_library(
     srcs = glob(["*Service.kt"]),
     visibility = [
         "//src/main/kotlin/org/wfanet/measurement/reporting/deploy/v2/common/server/postgres:__subpackages__",
+        "//src/test/kotlin/org/wfanet/measurement/reporting/deploy/v2/gcloud/spanner:__pkg__",
         "//src/test/kotlin/org/wfanet/measurement/reporting/deploy/v2/postgres:__pkg__",
     ],
     deps = [
