--- a/src/main/kotlin/org/wfanet/measurement/reporting/deploy/v2/postgres/readers/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/reporting/deploy/v2/postgres/readers/BUILD.bazel
@@ -1,6 +1,7 @@
 load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")
 
 package(default_visibility = [
+    "//src/main/kotlin/org/wfanet/measurement/reporting/deploy/v2/gcloud/spanner:__subpackages__",
     "//src/main/kotlin/org/wfanet/measurement/reporting/deploy/v2/postgres:__subpackages__",
 ])
 
