--- a/src/main/kotlin/org/wfanet/measurement/reporting/service/internal/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/reporting/service/internal/BUILD.bazel
@@ -1,7 +1,9 @@
 load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")
 
 package(default_visibility = [
-    "//src/main/kotlin/org/wfanet/measurement/reporting/deploy:__subpackages__",
+    "//src/main/kotlin/org/wfanet/measurement/reporting/deploy/v2:__subpackages__",
+    "//src/main/kotlin/org/wfanet/measurement/reporting/service/internal/testing/v2:__subpackages__",
+    "//src/test/kotlin/org/wfanet/measurement/reporting/deploy/v2:__subpackages__",
 ])
 
 kt_jvm_library(
@@ -14,5 +16,14 @@ kt_jvm_library(
         "@wfa_common_jvm//imports/java/com/google/protobuf",
         "@wfa_common_jvm//imports/java/io/grpc/protobuf",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
+    ],
+)
+
+kt_jvm_library(
+    name = "errors",
+    srcs = ["Errors.kt"],
+    deps = [
+        "//src/main/kotlin/org/wfanet/measurement/common/grpc:error_info",
+        "@wfa_common_jvm//imports/java/io/grpc:api",
     ],
 )
