--- a/src/test/kotlin/org/wfanet/measurement/reporting/deploy/v2/postgres/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/reporting/deploy/v2/postgres/BUILD.bazel
@@ -16,7 +16,7 @@ kt_jvm_test(
     deps = [
         "//src/main/kotlin/org/wfanet/measurement/reporting/deploy/v2/postgres:services",
         "//src/main/kotlin/org/wfanet/measurement/reporting/deploy/v2/postgres/testing",
-        "//src/main/kotlin/org/wfanet/measurement/reporting/service/internal/testing/v2:testing",
+        "//src/main/kotlin/org/wfanet/measurement/reporting/service/internal/testing/v2:measurement_consumers_service_test",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/db/r2dbc/postgres/testing:database_provider",
     ],
 )
