--- a/src/main/proto/wfa/measurement/securecomputation/storage/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/securecomputation/storage/BUILD.bazel
@@ -1,7 +1,6 @@
-load("@rules_proto//proto:defs.bzl", "proto_library")
+load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
 load(
     "@wfa_rules_kotlin_jvm//kotlin:defs.bzl",
-    "kt_jvm_grpc_proto_library",
     "kt_jvm_proto_library",
 )
 
@@ -10,17 +9,18 @@ package(default_visibility = ["//visibility:public"])
 IMPORT_PREFIX = "/src/main/proto"
 
 proto_library(
-    name = "requisitions_list_proto",
-    srcs = ["requisitions_list.proto"],
+    name = "resource_batch_proto",
+    srcs = ["resource_batch.proto"],
     strip_import_prefix = IMPORT_PREFIX,
     deps = [
         "@com_google_googleapis//google/api:field_behavior_proto",
         "@com_google_googleapis//google/api:resource_proto",
         "@com_google_protobuf//:any_proto",
+        "@wfa_measurement_proto//src/main/proto/wfa/measurement/api/v2alpha:requisition_proto",
     ],
 )
 
 kt_jvm_proto_library(
-    name = "requisitions_list_kt_jvm_proto",
-    deps = [":requisitions_list_proto"],
+    name = "resource_batch_kt_jvm_proto",
+    deps = [":resource_batch_proto"],
 )
