feat: add video and banner_ad fields, iqf config, and textproto

--- a/src/main/proto/wfa/measurement/internal/reporting/v2/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/internal/reporting/v2/BUILD.bazel
@@ -218,6 +218,7 @@ MESSAGE_LIBS = [
     "basic_report",
     "event_filter",
     "event_template_field",
+    "impression_qualification_filter_config",
     "impression_qualification_filter_spec",
     "metric_frequency_spec",
     "result_group",
@@ -279,6 +280,13 @@ proto_library(
     srcs = ["metric_frequency_spec.proto"],
     strip_import_prefix = IMPORT_PREFIX,
     deps = ["@com_google_googleapis//google/type:dayofweek_proto"],
+)
+
+proto_library(
+    name = "reporting_impression_qualification_filter_config_proto",
+    srcs = ["reporting_impression_qualification_filter_config.proto"],
+    strip_import_prefix = IMPORT_PREFIX,
+    deps = [":reporting_impression_qualification_filter_proto"],
 )
 
 proto_library(
@@ -357,6 +365,7 @@ proto_descriptor_set(
         ":event_template_field_proto",
         ":impression_qualification_filter_spec_proto",
         ":metric_frequency_spec_proto",
+        ":reporting_impression_qualification_filter_config_proto",
         ":reporting_impression_qualification_filter_proto",
         ":reporting_interval_proto",
         ":result_group_proto",
