refactor: rebase on top of updated proto resources

--- a/src/main/kotlin/org/wfanet/measurement/securecomputation/deploy/gcloud/spanner/readers/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/securecomputation/deploy/gcloud/spanner/readers/BUILD.bazel
@@ -14,7 +14,8 @@ kt_jvm_library(
         "//src/main/kotlin/org/wfanet/measurement/common:flows",
         "//src/main/kotlin/org/wfanet/measurement/common/identity",
         "//src/main/kotlin/org/wfanet/measurement/securecomputation/deploy/gcloud/spanner/common",
-        "//src/main/proto/wfa/measurement/internal/securecomputation/controlplane/v1alpha:work_item_kt_jvm_proto",
+        "//src/main/proto/wfa/measurement/internal/securecomputation/controlplane:work_item_attempt_kt_jvm_proto",
+        "//src/main/proto/wfa/measurement/internal/securecomputation/controlplane:work_item_kt_jvm_proto",
         "@wfa_common_jvm//imports/java/com/google/cloud/spanner",
         "@wfa_common_jvm//imports/kotlin/kotlinx/coroutines:core",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
