--- a/src/main/proto/wfa/measurement/internal/securecomputation/controlplane/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/internal/securecomputation/controlplane/BUILD.bazel
@@ -59,6 +59,7 @@ proto_library(
     strip_import_prefix = IMPORT_PREFIX,
     deps = [
         ":work_item_attempt_proto",
+        "@com_google_googleapis//google/api:field_behavior_proto",
     ],
 )
 
