--- a/src/main/proto/wfa/measurement/securecomputation/controlplane/v1alpha/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/securecomputation/controlplane/v1alpha/BUILD.bazel
@@ -7,6 +7,8 @@ load(
 
 package(default_visibility = ["//visibility:public"])
 
+exports_files(["queues_config.textproto"])
+
 IMPORT_PREFIX = "/src/main/proto"
 
 #Resources and shared message types.
