--- a/src/main/proto/wfa/measurement/internal/securecomputation/controlplane/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/internal/securecomputation/controlplane/BUILD.bazel
@@ -60,6 +60,7 @@ proto_library(
     deps = [
         ":work_item_attempt_proto",
         "@com_google_googleapis//google/api:field_behavior_proto",
+        "@com_google_protobuf//:timestamp_proto",
     ],
 )
 
