--- a/src/main/proto/wfa/measurement/internal/securecomputation/controlplane/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/internal/securecomputation/controlplane/BUILD.bazel
@@ -50,6 +50,7 @@ proto_library(
     strip_import_prefix = IMPORT_PREFIX,
     deps = [
         ":work_item_proto",
+        "@com_google_protobuf//:timestamp_proto",
     ],
 )
 
