verify tables are created

--- a/src/test/kotlin/org/wfanet/measurement/reporting/deploy/v2/gcloud/spanner/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/reporting/deploy/v2/gcloud/spanner/BUILD.bazel
@@ -10,6 +10,8 @@ spanner_emulator_test(
     deps = [
         "//src/main/kotlin/org/wfanet/measurement/reporting/deploy/v2/gcloud/spanner/testing",
         "@wfa_common_jvm//imports/java/com/google/cloud/spanner",
+        "@wfa_common_jvm//imports/java/com/google/common/truth",
+        "@wfa_common_jvm//imports/kotlin/kotlinx/coroutines:core",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/gcloud/spanner/testing",
     ],
 )
