--- a/src/main/kotlin/org/wfanet/measurement/securecomputation/controlplane/v1alpha/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/securecomputation/controlplane/v1alpha/BUILD.bazel
@@ -6,6 +6,10 @@ kt_jvm_library(
     name = "work_items_service",
     srcs = ["WorkItemsService.kt"],
     deps = [
+        ":resource_conversion",
+        "//src/main/kotlin/org/wfanet/measurement/securecomputation/service:errors",
+        "//src/main/kotlin/org/wfanet/measurement/securecomputation/service:resource_key",
+        "//src/main/kotlin/org/wfanet/measurement/securecomputation/service/internal:errors",
         "//src/main/proto/wfa/measurement/internal/securecomputation/controlplane:work_item_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/internal/securecomputation/controlplane:work_items_service_kt_jvm_grpc_proto",
         "//src/main/proto/wfa/measurement/securecomputation/controlplane/v1alpha:work_item_kt_jvm_proto",
@@ -18,10 +22,30 @@ kt_jvm_library(
 )
 
 kt_jvm_library(
+    name = "work_item_attempts_service",
+    srcs = ["WorkItemAttemptsService.kt"],
+    deps = [
+        ":resource_conversion",
+        "//src/main/kotlin/org/wfanet/measurement/securecomputation/service:errors",
+        "//src/main/kotlin/org/wfanet/measurement/securecomputation/service:resource_key",
+        "//src/main/kotlin/org/wfanet/measurement/securecomputation/service/internal:errors",
+        "//src/main/proto/wfa/measurement/internal/securecomputation/controlplane:work_item_attempt_kt_jvm_proto",
+        "//src/main/proto/wfa/measurement/internal/securecomputation/controlplane:work_item_attempts_service_kt_jvm_grpc_proto",
+        "//src/main/proto/wfa/measurement/securecomputation/controlplane/v1alpha:work_item_attempt_kt_jvm_proto",
+        "//src/main/proto/wfa/measurement/securecomputation/controlplane/v1alpha:work_item_attempts_service_kt_jvm_grpc_proto",
+        "@wfa_common_jvm//imports/java/com/google/protobuf",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/grpc",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/identity",
+    ],
+)
+
+kt_jvm_library(
     name = "google_pub_sub_work_items_service",
     srcs = ["GooglePubSubWorkItemsService.kt"],
     deps = [
         ":work_items_service",
+        "//src/main/proto/wfa/measurement/internal/securecomputation/controlplane:work_items_service_kt_jvm_grpc_proto",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/gcloud/pubsub:publisher",
     ],
 )
@@ -30,6 +54,7 @@ kt_jvm_library(
     name = "resource_conversion",
     srcs = ["ResourceConversion.kt"],
     deps = [
+        "//src/main/kotlin/org/wfanet/measurement/securecomputation/service:resource_key",
         "//src/main/proto/wfa/measurement/internal/securecomputation/controlplane:work_item_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/securecomputation/controlplane/v1alpha:work_item_kt_jvm_proto",
     ],
