--- a/src/main/kotlin/org/wfanet/measurement/securecomputation/service/internal/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/securecomputation/service/internal/BUILD.bazel
@@ -2,6 +2,7 @@ load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")
 
 package(
     default_visibility = [
+        "//src/main/kotlin/org/wfanet/measurement/securecomputation/controlplane/v1alpha:__subpackages__",
         "//src/main/kotlin/org/wfanet/measurement/securecomputation/deploy:__subpackages__",
         "//src/main/kotlin/org/wfanet/measurement/securecomputation/service:__subpackages__",
     ],
