test: for WorkItemService

--- a/src/main/kotlin/org/wfanet/measurement/securecomputation/service/internal/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/securecomputation/service/internal/BUILD.bazel
@@ -5,6 +5,7 @@ package(
         "//src/main/kotlin/org/wfanet/measurement/securecomputation/controlplane/v1alpha:__subpackages__",
         "//src/main/kotlin/org/wfanet/measurement/securecomputation/deploy:__subpackages__",
         "//src/main/kotlin/org/wfanet/measurement/securecomputation/service:__subpackages__",
+        "//src/test/kotlin/org/wfanet/measurement/securecomputation/controlplane/v1alpha:__subpackages__",
     ],
 )
 
