--- a/src/main/kotlin/org/wfanet/measurement/securecomputation/controlplane/v1alpha/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/securecomputation/controlplane/v1alpha/BUILD.bazel
@@ -7,6 +7,7 @@ kt_jvm_library(
     srcs = ["WorkItemsService.kt"],
     deps = [
         ":resource_conversion",
+        "//src/main/kotlin/org/wfanet/measurement/common/api:resource_ids",
         "//src/main/kotlin/org/wfanet/measurement/securecomputation/service:errors",
         "//src/main/kotlin/org/wfanet/measurement/securecomputation/service:resource_key",
         "//src/main/kotlin/org/wfanet/measurement/securecomputation/service/internal:errors",
@@ -55,7 +56,9 @@ kt_jvm_library(
     srcs = ["ResourceConversion.kt"],
     deps = [
         "//src/main/kotlin/org/wfanet/measurement/securecomputation/service:resource_key",
+        "//src/main/proto/wfa/measurement/internal/securecomputation/controlplane:work_item_attempt_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/internal/securecomputation/controlplane:work_item_kt_jvm_proto",
+        "//src/main/proto/wfa/measurement/securecomputation/controlplane/v1alpha:work_item_attempt_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/securecomputation/controlplane/v1alpha:work_item_kt_jvm_proto",
     ],
 )
