--- a/src/main/proto/wfa/measurement/reporting/postprocessing/v2alpha/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/reporting/postprocessing/v2alpha/BUILD.bazel
@@ -12,12 +12,27 @@ proto_library(
     srcs = ["report_summary.proto"],
 )
 
+proto_library(
+    name = "post_processing_result_proto",
+    srcs = ["post_processing_result.proto"],
+)
+
 kt_jvm_proto_library(
     name = "report_summary_kt_jvm_proto",
     deps = [":report_summary_proto"],
 )
 
+kt_jvm_proto_library(
+    name = "post_processing_result_kt_jvm_proto",
+    deps = [":post_processing_result_proto"],
+)
+
 py_proto_library(
     name = "report_summary_py_pb2",
     deps = [":report_summary_proto"],
+)
+
+py_proto_library(
+    name = "post_processing_result_py_pb2",
+    deps = [":post_processing_result_proto"],
 )
