Trying to set up infra

--- a/src/main/docker/BUILD.bazel
+++ b/src/main/docker/BUILD.bazel
@@ -9,6 +9,7 @@ load(":images.bzl", "ALL_EKS_IMAGES", "ALL_GKE_IMAGES", "ALL_IMAGES", "ALL_LOCAL
 package(
     default_testonly = True,  #TODO: delete when InMemoryKeyStore and FakeHybridCipher are not used.
     default_visibility = [
+        "//src/test/kotlin/org/wfanet/measurement/edpaggregator/requisitionfetcher:__pkg__",
         "//src/test/kotlin/org/wfanet/measurement/integration/k8s:__pkg__",
         "//src/test/kotlin/org/wfanet/panelmatch/integration/k8s:__pkg__",
     ],
