--- a/src/main/kotlin/org/wfanet/measurement/edpaggregator/requisitionfetcher/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/edpaggregator/requisitionfetcher/BUILD.bazel
@@ -37,11 +37,29 @@ java_library(
     ],
 )
 
+#java_binary(
+#    name = "run_requisition_fetcher_function",
+#    args = [
+#        "--target=org.wfanet.measurement.edpaggregator.requisitionfetcher.RequisitionFetcherFunction",
+#        "--port=8085",
+#    ],
+#    jvm_flags = [
+#        "-Dcom.google.cloud.functions.invoker.runner.function=org.wfanet.measurement.edpaggregator.requisitionfetcher.RequisitionFetcherFunction",
+#    ],
+#    main_class = "com.google.cloud.functions.invoker.runner.Invoker",
+#    runtime_deps = [
+#        ":requisition_fetcher_function_lib",
+#        "//imports/java/com/google/cloud/functions:java_function_invoker",
+#    ],
+#)
 java_binary(
     name = "run_requisition_fetcher_function",
     args = [
         "--target=org.wfanet.measurement.edpaggregator.requisitionfetcher.RequisitionFetcherFunction",
         "--port=8085",
+    ],
+    jvm_flags = [
+        "-Dcom.google.cloud.functions.invoker.runner.target=org.wfanet.measurement.edpaggregator.requisitionfetcher.RequisitionFetcherFunction",
     ],
     main_class = "com.google.cloud.functions.invoker.runner.Invoker",
     runtime_deps = [
